--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/mask-on/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YOLOv8 Tensorflow.js App</title>
+    <title>Mask On | Live Mask-Wearing Detector</title>
     <script type="module" crossorigin src="/mask-on/assets/index.6f164b27.js"></script>
     <link rel="stylesheet" href="/mask-on/assets/index.4d807f88.css">
   </head>
