--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/mask-on/favicon.ico" />
+    <link rel="icon" href="/special-problem/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mask On | Live Mask-Wearing Detector</title>
-    <script type="module" crossorigin src="/mask-on/assets/index.6f164b27.js"></script>
-    <link rel="stylesheet" href="/mask-on/assets/index.4d807f88.css">
+    <script type="module" crossorigin src="/special-problem/assets/index.6f164b27.js"></script>
+    <link rel="stylesheet" href="/special-problem/assets/index.4d807f88.css">
   </head>
   <body>
     <div id="root"></div>
