--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YOLOv8 Tensorflow.js App</title>
+    <title>Mask On | Live Mask-Wearing Detector</title>
   </head>
   <body>
     <div id="root"></div>
